site/web/app/themes/host/assets/css/main.css
/* ... */
.checkerboard-item__content {
  padding: 1.25rem;
  transform: rotateY(90deg);
  transform-origin: left center;
  transition: transform 500ms, opacity 0ms 500ms;
  background: #fff;
  color: #d50e3c;
  font-size: 0.9375rem;
  z-index: 2;
  opacity: 0;
}

.checkerboard-item__content .btn, .checkerboard-item__content .menu-item--banner-language-switcher select, .menu-item--banner-language-switcher .checkerboard-item__content select {
  display: block;
  margin-top: 0.625rem !important;
}

.-active .checkerboard-item__content {
  transform: rotateY(0);
  transition-delay: 0ms, 0ms;
  opacity: 1;
}

.checkerboard-item__feeling-lucky {
  color: #b455a0;
}

.split-feature__main,
.split-feature__secondary {
  display: -ms-flexbox;
  display: flex;
  -ms-flex-direction: column;
      flex-direction: column;
  -ms-flex-pack: center;
      justify-content: center;
  -ms-flex-align: center;
      align-items: center;
}

.split-feature__content {
  padding: 2.5rem 1.875rem;
}

.split-feature__content .btn, .split-feature__content .menu-item--banner-language-switcher select, .menu-item--banner-language-switcher .split-feature__content select {
  margin-top: 20px;
}

.split-feature__secondary {
  min-height: 12.5rem;
}

.split-feature__secondary .grid {
  width: 100%;
  -ms-flex-positive: 1;
      flex-grow: 1;
}

.split-feature__secondary .slideshow {
  display: -ms-flexbox;
  display: flex;
  -ms-flex: 1;
      flex: 1;
  width: 100%;
}

.band--inset.split-feature.-left .split-feature__content {
  margin-left: 0rem;
}

.split-feature.-twin-content .split-feature__main .split-feature__content {
  padding-bottom: 40px;
}

.split-feature.-twin-content .split-feature__secondary {
  min-height: 0;
  padding-bottom: 40px;
}

.split-feature--location-realted-building {
  width: 100%;
}

.uni-information__logo-container {
  max-width: 33.59375rem;
  margin: 0 auto;
  padding: 40px;
}

.split-feature__secondary--location-list {
  display: none;
}

.billboard {
  padding: 0 1.25rem;
}

.billboard__inner {
  padding: 3.125rem 0;
  background: transparent none no-repeat bottom right/auto 90%;
}

.billboard__main .awards {
  margin-left: -10px;
  margin-left: -10px;
}

.billboard__secondary {
  margin-top: 2.5rem;
}

.-bg-actual-size > .billboard__inner {
  background: transparent none no-repeat center right;
}

.billboard__main--building-intro__heading {
  margin-top: 20px;
}

.awards {
  display: -ms-flexbox;
  display: flex;
  -ms-flex-wrap: wrap;
      flex-wrap: wrap;
  max-width: 25.3125rem;
  margin: 0 -10px -20px;
  padding: 0 1.875rem;
  list-style: none outside;
}

.awards__item {
  width: 50%;
  padding: 0 10px;
  margin-bottom: 20px;
}

.hero {
  padding: 0 1.875rem;
}

.hero__inner {
  padding: 5.625rem 0;
  text-align: center;
}

.hero__image {
  margin: 0 auto;
}

.hero--full-bleed {
  padding: 0;
}

.hero--full-bleed .hero__inner {
  width: 100%;
  max-width: 100%;
  max-height: 54vh;
  padding: 0;
  overflow: hidden;
}

.hero--full-bleed .hero__inner img {
  width: 100%;
}

.bleed-image {
  width: 100%;
  background-position: center center;
  background-size: cover;
  background-repeat: no-repeat;
  -ms-flex-positive: 1;
      flex-grow: 1;
}

.bleed-image__image {
  opacity: 0;
}

.bleed-image--top {
  background-position-y: top;
}

.bleed-image--hide-small {
  display: none;
}

.map__map {
  position: relative;
  padding-top: 33%;
  background: transparent none no-repeat center center/cover;
  overflow: hidden;
  min-height: 20rem;
}

.map__map.js-enhanced {
  background: transparent none !important;
}

.map__map > div {
  top: 0;
}

.map__static {
  position: absolute;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
  opacity: 0.0000001;
}

.map__filters {
  width: 33.333%;
  min-width: 15.625rem;
  max-width: 28.125rem;
  padding: 20px;
}

.map__filters .form-filter {
  padding-left: 2.5rem;
}

.map__filter .svg-icon {
  height: 1.6875rem;
  width: 1.25rem;
  margin-left: -2.5rem;
  margin-right: 0.5em;
  float: left;
  transition: fill 200ms;
  fill: rgba(153, 153, 153, 0.3);
  vertical-align: middle;
}

.map__filter.-unis input:checked ~ .svg-icon {
  fill: #f79433;
}

.map__filter.-food input:checked ~ .svg-icon {
  fill: #b455a0;
}

.map__filter.-shops input:checked ~ .svg-icon {
  fill: #00b9b5;
}

.map__filter.-transport input:checked ~ .svg-icon {
  fill: #21293c;
}

.property-list__list {
  margin: 0;
  list-style: none outside;
}

.property-list__item + .property-list__item {
  margin-top: 1.25rem;
}

.listed-property__main {
  min-height: 18.75rem;
}

.listed-property__content {
  position: relative;
  height: 100%;
}

.listed-property__title,
.listed-property__availability {
  margin: 0;
  font-size: 2.1875rem;
  line-height: 1.2;
  letter-spacing: -0.0625rem;
}

.listed-property__availability--sky[class] {
  color: #00c0f3;
}

.listed-property__availability--orange[class] {
  color: #f79433;
}

.listed-property__availability--red[class] {
  color: #d50e3c;
}

.listed-property__number-types {
  margin: 1em 0;
  font-size: 1.75rem;
  font-weight: bold;
}

.listed-property__address-contact {
  margin-top: auto;
}

.listed-property__address-contact .btn, .listed-property__address-contact .menu-item--banner-language-switcher select, .menu-item--banner-language-switcher .listed-property__address-contact select {
  min-width: 0;
}

.listed-property__address-contact .svg-icon--marker {
  position: relative;
  top: 0.25em;
  height: 1.125rem;
  width: 0.875rem;
  margin-left: -1.5625rem;
  float: left;
}

.listed-property__image {
  background: #00c0f3 none no-repeat bottom center/cover;
}

.listed-property__price {
  padding: 20px 30px;
}

.listed-property__booking-btn {
  display: block;
  background-color: #d50e3c !important;
}

.room-list__header {
  background: #fff;
}

.room-list__title-info {
  padding: 1.875rem;
}

.room-list-nav {
  margin-top: 1.875rem;
  padding: 1.875rem;
}

.room-list-nav__item {
  position: relative;
  transition: all ease-in-out 0.2s;
}
/* ... */

